fix event-page dark mode ticket box color inconsistency

--- a/event-page/style.css
+++ b/event-page/style.css
@@ -37,7 +37,7 @@ main {
 .spacetime {
   text-align: left;
 }
-.ticket {
+#ticket {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -55,7 +55,7 @@ main {
   .event-container {
     padding: 20px;
   }
-  .ticket {
+  #ticket {
     padding: 10px;
   }
 }
@@ -75,37 +75,37 @@ main {
   .description {
     width: 80%;
   }
-  .ticket {
+  #ticket {
     width: 70%;
   }
 }
 @media screen and (orientation: landscape) {
-  .description, .ticket {
+  .description, #ticket {
     min-width: 20vw;
   }
 }
 @media screen and (orientation: portrait) {
-  .description, .ticket {
+  .description, #ticket {
     min-width: 40vw;
   }
 }
 @media screen and (max-height: 574px) {
-  .description, .ticket {
+  .description, #ticket {
     min-height: 40vh;
   }
 }
 @media screen and (min-height: 575px) and (max-height: 949px) {
-  .description, .ticket {
+  .description, #ticket {
     min-height: 30vh;
   }
 }
 @media screen and (min-height: 950px) and (orientation: landscape) {
-  .description, .ticket {
+  .description, #ticket {
     min-height: 45vh;
   }
 }
 @media screen and (min-height: 950px) and (orientation: portrait) {
-  .description, .ticket {
+  .description, #ticket {
     min-height: 30vh;
   }
 }
@@ -259,11 +259,11 @@ body {
   background: #121212;
 }
 
-.ticket {
+#ticket {
   background: #121212;
   border-radius: 15px;
 }
-.ticket::before {
+#ticket::before {
   content: "";
   position: absolute;
   top: 0;
